feat: update profile & update password
